# Oganesyan_OOPP_qt6

./: AddBook.cpp  AddBook.h  AddBook.ui  Book.cpp  Book.h  Boost.h  CMakeLists.txt  EBook.cpp  EBook.h  EditBook.cpp  EditBook.h  EditBook.ui  EditDialog.cpp  EditDialog.h  EditDialog.ui  GitHub - Ярлык (2).lnk  GitHub - Ярлык (3).lnk  GitHub - Ярлык.lnk  WidgetOganesyan.cpp  WidgetOganesyan.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
